# stave

./: .gitignore  README.md  pyproject.toml
stave/: __main__.py
